--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -54,5 +54,5 @@ jobs:
         run: bundle exec bundle-audit check --update
       - name: Security audit application code
         run: bundle exec brakeman -q -w2
-      - name: Lint Ruby files
-        run: bundle exec rubocop --parallel
+#      - name: Lint Ruby files with Rubocop
+#        run: bundle exec rubocop --parallel
