--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -55,4 +55,4 @@ jobs:
       - name: Security audit application code
         run: bundle exec brakeman -q -w2
       - name: Lint Ruby files with Rubocop
-        run: rubocop --parallel ${{ steps.get_file_changes.outputs.files}}
+        run: bundle exec rubocop --parallel ${{ steps.get_file_changes.outputs.files}}
